# crd-2-json-schema-rs

./: .gitignore  Cargo.toml  README.md  resource-definition.yaml
src/: crd.rs  main.rs
