[package]
name = "crd-2-json-schema-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json_schema = "1.7.0"
openapiv3 = "1.0.2"
schemars = "0.8.12"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
